Opened 9 years ago
Closed 9 years ago
#12693 closed bug (fixed)
[Debugger] Retrieving return values sometimes doesn't work
Reported by: | anevilyak | Owned by: | anevilyak |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/Debugger | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
Sometimes, when stepping over lines containing nested function calls, the corresponding return values aren't reported in the variables list, even though the functions in question all have debug information available. A consistent testcase needs to be found in order to investigate this further.
Note:
See TracTickets
for help on using tickets.
Problem understood, we aren't correctly handling PLT entries that resolve to a function outside of their containing image.