Debugger: Fix #12693.

DwarfImageDebugInfo:
- When resolving the address of a PIC function that a value was
  returned by, check if the resulting address actually belongs to
  the same image as the caller. If not, find the appropriate image
  for the new address. Combined with the previous commits, this fixes
  the issue that functions called indirectly by PLT entry that jumped
  to another image entirely wouldn't be mapped back to their
  corresponding FunctionDebugInfo instance, and thus would be skipped
  since we  couldn't determine a type to associate the return value with.